# shapeless-blog-rust

./: .env  Cargo.toml  makefile  readme.org  rest.http
init/: shapeless-blog.init
log/: shapeless-blog.log.2023-05-22  shapeless-blog.log.2023-05-23  shapeless-blog.log.2023-05-25
migrations/: 20230526124609_create_users_table.sql  20230526124625_create_tokens_table.sql  20230526124651_create_blogs_table.sql  20230526124658_create_tags_table.sql
scripts/: deploy.sh
src/: app.rs  config.rs  log.rs  main.rs  server.rs
src/cli/: users.rs
src/data/: blogs.rs  mod.rs  tags.rs  tokens.rs  users.rs
src/rest/: blogs.rs  errors.rs  helpers.rs  middlewares.rs  mod.rs  users.rs
src/web/: blogs.rs  errors.rs  helpers.rs  mod.rs
src/web/templates/: error.html  home.html  list_tags.html  not_found.html  post.html  server_error.html  tag.html
